--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -7,6 +7,16 @@
     margin-left: 10px;
     transition: 0.5s;
 }
+
+.navActive{
+    color: blue;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    text-decoration: none;
+    margin-left: 10px;
+    transition: 0.5s;
+}
+
 .nav-items span{
     color: #F34F3F;
 }
